--- a/view/includes/profileShared.ejs
+++ b/view/includes/profileShared.ejs
@@ -1,86 +1,31 @@
 <!-- MODAL -->
-<div
-  id="profile-image-modal"
-  class="fixed pin flex relative items-center justify-center bg-white"
-  style="display: none;"
->
-<div class="flex justify-between items-center px-2 py-2" style="max-height: 75vh; right: 0; left: 0;">
-  <div><%= profile.firstName %> <%= profile.lastName %></div>
-  <div
-    id="close-image"
-    class="cursor-pointer rounded-full bg-gray-900 text-white hover:bg-gray-800 px-2 text-2xl bg-white"
-  >
-    &#10005;
+<div id="profile-image-modal" class="fixed pin flex relative items-center justify-center bg-white" style="display: none">
+  <div class="flex justify-between items-center px-2 py-2" style="max-height: 75vh; right: 0; left: 0">
+    <div><%= profile.firstName %> <%= profile.lastName %></div>
+    <div id="close-image" class="cursor-pointer rounded-full bg-gray-900 text-white hover:bg-gray-800 px-2 text-2xl bg-white">&#10005;</div>
   </div>
-</div>
-  <img
-    src="<%= profile.photo %>"
-    class="absolute z-50"
-    alt=""
-    srcset="<%= profile.photo %>"
-  />
+  <img src="<%= profile.photo %>" class="absolute z-50" alt="" srcset="<%= profile.photo %>" />
 </div>
 <!-- MODAL ENDS -->
-<div
-  class="mx-auto text-sm rounded overflow-hidden shadow-lg bg-white"
-  style="height: 23rem; width: 18rem;"
->
+<div class="mx-auto text-sm rounded overflow-hidden shadow-lg bg-white" style="height: 25rem; width: 18rem">
   <% if(profile.photo){ %>
-  <img
-    id="profile-image"
-    class="w-full h-48 object-cover"
-    title="<%= profile.firstName %>"
-    src="<%= profile.photo %>"
-    alt="profile picture"
-    importance="high"
-    srcset="<%= profile.photo %>"
-  />
+  <img id="profile-image" class="w-full h-48 object-cover" title="<%= profile.firstName %>" src="<%= profile.photo %>" alt="profile picture" importance="high" srcset="<%= profile.photo %>" />
   <% } else { %>
-  <img
-    class="w-full h-48 object-cover"
-    title="<%= profile.firstName %> <%= profile.lastName %>"
-    src="../../static/blank.png"
-    alt="profile picture"
-  />
+  <img class="w-full h-48 object-cover" title="<%= profile.firstName %> <%= profile.lastName %>" src="../../static/blank.png" alt="profile picture" />
   <%}%>
   <div class="text-sm px-3 relative">
     <% if(profile.class){ %>
-    <span
-      class="absolute text-sm ml-56 inline-block bg-gray-200 rounded-full p-1 -mt-1 font-semibold text-gray-700"
-    >
-      <%= profile.class %>
-    </span>
+    <span class="absolute text-sm ml-56 inline-block bg-gray-200 rounded-full p-1 -mt-1 font-semibold text-gray-700"> <%= profile.class %> </span>
     <% } else { %>
-    <span
-      class="absolute text-xs ml-56 inline-block bg-gray-200 rounded-full p-1 -mt-1 font-semibold text-gray-700"
-    >
-      Class?
-    </span>
+    <span class="absolute text-xs ml-56 inline-block bg-gray-200 rounded-full p-1 -mt-1 font-semibold text-gray-700"> Class? </span>
     <%}%>
-    <div
-      class="font-bold text-md p-px mb-1"
-      style="overflow-wrap: break-word; min-width: 0px; width: 18rem"
-    >
-      <%= profile.firstName %> <%= profile.lastName %>
-    </div>
+    <div class="font-bold text-md p-px mb-1" style="overflow-wrap: break-word; min-width: 0px; width: 18rem"><%= profile.firstName %> <%= profile.lastName %></div>
 
-    <p class="font-medium mb-1 font-mono text-center">
-      👩🏽‍🎓 Class of <%= profile.year %>
-    </p>
-    <p class="mb-1">
-      <span class="text-gray-600">Nickname 👤:</span> <%= profile.nickname %>
-    </p>
-    <p class="mb-1">
-      <span class="text-gray-600">Lives in 🏡:</span> <%= profile.residence %>
-    </p>
-    <p class="mb-1">
-      <span class="text-gray-600">Occupation 👷‍♀:</span> <%= profile.occupation
-      %>
-    </p>
-    <p class="mb-1">
-      <span class="text-gray-600">Birthday 📅:</span> <%= profile.month %> <%=
-      profile.day %>
-    </p>
+    <p class="font-medium mb-1 font-mono text-center">👩🏽‍🎓 Class of <%= profile.year %></p>
+    <p class="mb-1"><span class="text-gray-600">Nickname 👤:</span> <%= profile.nickname %></p>
+    <p class="mb-1"><span class="text-gray-600">Lives in 🏡:</span> <%= profile.residence %></p>
+    <p class="mb-1"><span class="text-gray-600">Occupation 👷‍♀:</span> <%= profile.occupation %></p>
+    <p class="mb-1"><span class="text-gray-600">Birthday 📅:</span> <%= profile.month %> <%= profile.day %></p>
+    <p class="mb-1"><span class="text-gray-600">Phone Number 📞:</span> <%= profile.phone %></p>
   </div>
 </div>
-
