--- a/view/includes/header.ejs
+++ b/view/includes/header.ejs
@@ -2,11 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>
-      <%= typeof(locals.seo) == "undefined" ? 'GSS Gwarinpa Contact Book 📗' :
-      `${locals.seo.firstName} ${locals.seo.lastName} | GSS Gwarinpa Contact
-      Book 📗` %>
-    </title>
+    <title><%= typeof(locals.seo) == "undefined" ? 'GSS Gwarinpa Contact Book 📗' : `${locals.seo.firstName} ${locals.seo.lastName} | GSS Gwarinpa Contact Book 📗` %></title>
     <!-- FAVICON -->
     <link rel="icon" type="image/x-icon" href="../../static/favicon.ico" />
     <!-- FAVICON ENDS -->
@@ -14,49 +10,22 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <!-- SEO -->
     <meta itemprop="name" content="GSS Gwarinpa Contact Book 📗" />
-    <meta
-      itemprop="description"
-      content="Find Your GSS Gwarinpa Classmates and Their Contacts."
-    />
-    <meta
-      itemprop="image"
-      content="<%= typeof(locals.seo) == 'undefined' ? 'https://gss-gwarinpa.s3.us-east-2.amazonaws.com/1580629627915' : `${locals.seo.photo}` %>"
-    />
+    <meta itemprop="description" content="Find Your GSS Gwarinpa Classmates and Their Contacts." />
+    <meta itemprop="image" content="<%= typeof(locals.seo) == 'undefined' ? 'https://gss-gwarinpa.s3.us-east-2.amazonaws.com/1580629627915' : `${locals.seo.photo}` %>" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="profile" />
-    <meta
-      property="og:url"
-      content="<%= typeof(locals.seo) == 'undefined' ? 'https://www.gssgcontactbook.com/' : `${locals.seo.url}` %>"
-    />
+    <meta property="og:url" content="<%= typeof(locals.seo) == 'undefined' ? 'https://www.gssgcontactbook.com/' : `${locals.seo.url}` %>" />
     <meta property="og:site_name" content="GSS Gwarinpa Contact Book 📗" />
-    <meta
-      property="og:title"
-      content="<%= typeof(locals.seo) == 'undefined' ? 'GSS Gwarinpa Contact Book 📗' : `${locals.seo.firstName} ${locals.seo.lastName} | GSS Gwarinpa Contact Book 📗` %>"
-    />
-    <meta
-      property="og:description"
-      content="Find Your GSS Gwarinpa Classmates and Their Contacts."
-    />
-    <meta
-      property="og:image"
-      content="<%= typeof(locals.seo) == 'undefined' ? 'https://gss-gwarinpa.s3.us-east-2.amazonaws.com/1580629627915' : `${locals.seo.photo}` %>"
-    />
+    <meta property="og:title" content="<%= typeof(locals.seo) == 'undefined' ? 'GSS Gwarinpa Contact Book 📗' : `${locals.seo.firstName} ${locals.seo.lastName} | GSS Gwarinpa Contact Book 📗` %>" />
+    <meta property="og:description" content="Find Your GSS Gwarinpa Classmates and Their Contacts." />
+    <meta property="og:image" content="<%= typeof(locals.seo) == 'undefined' ? 'https://gss-gwarinpa.s3.us-east-2.amazonaws.com/1580629627915' : `${locals.seo.photo}` %>" />
     <meta property="og:image:alt" content="Profile photo" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="GSS Gwarinpa Contact Book 📗" />
-    <meta
-      name="twitter:description"
-      content="Find Your GSS Gwarinpa Classmates and Their Contacts."
-    />
-    <meta
-      name="twitter:image"
-      content="<%= typeof(locals.seo) == 'undefined' ? 'https://gss-gwarinpa.s3.us-east-2.amazonaws.com/1580629627915' : `${locals.seo.photo}` %>"
-    />
+    <meta name="twitter:description" content="Find Your GSS Gwarinpa Classmates and Their Contacts." />
+    <meta name="twitter:image" content="<%= typeof(locals.seo) == 'undefined' ? 'https://gss-gwarinpa.s3.us-east-2.amazonaws.com/1580629627915' : `${locals.seo.photo}` %>" />
     <!-- SEO ENDS -->
-    <link
-      href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
-      rel="stylesheet"
-    />
+    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
     <script src="/main-bundled.js" defer></script>
     <link type="text/css" href="/main.css" rel="stylesheet" />
@@ -65,81 +34,36 @@
   <header class="bg-green-600 text-xs text-white">
     <nav class="flex justify-between items-center p-3 max-w-sm sm:max-w-4xl mx-auto">
       <a class="text-lg" href="/">
-      <div class="flex items-center">
-        <svg
-          class="hidden sm:block"
-          xmlns="http://www.w3.org/2000/svg"
-          width="48"
-          height="48"
-          viewBox="0 0 24 24"
-          fill="none"
-          stroke="currentColor"
-          stroke-width="1"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          class="feather feather-home"
-        >
-          <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
-          <polyline points="9 22 9 12 15 12 15 22"></polyline>
-        </svg>
-        <svg
-          class="sm:hidden"
-          xmlns="http://www.w3.org/2000/svg"
-          width="24"
-          height="24"
-          viewBox="0 0 24 24"
-          fill="none"
-          stroke="currentColor"
-          stroke-width="1"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          class="feather feather-home"
-        >
-          <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
-          <polyline points="9 22 9 12 15 12 15 22"></polyline>
-        </svg>
-        <div class="ml-1">
-           <p class="hidden sm:block text-lg">Gwarinpa Contact Book</p>
-           <p class="text-xs"> Stay Home. Save Lives.</p>
+        <div class="flex items-center">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
+            <polyline points="9 22 9 12 15 12 15 22"></polyline>
+          </svg>
+
+          <p class="hidden sm:block text-lg ml-1 pt-1 font-semibold">Gwarinpa Contact Book</p>
         </div>
-         
-      </div>
       </a>
 
       <% if (user) { %>
       <form action="/logout" method="POST" class="flex flex-wrap">
         <label for="logout">
-          <input
-            id="logout"
-            value="Logout"
-            type="submit"
-            class="mr-4 rounded bg-transparent cursor-pointer border border-white hover:bg-green-800 px-3 py-1"
-          />
+          <input id="logout" value="Logout" type="submit" class="mr-4 rounded bg-transparent cursor-pointer border border-white hover:bg-green-800 px-3 py-1" />
         </label>
       </form>
 
       <% } else { %>
       <div class="flex text-lg">
-        <a
-          href="/login"
-          class="flex items-center rounded mr-4 sm:mr-12 text-center inline-block 
-          px-3 text-bold hover:text-gray-300"
-          >Login</a
-        >
-        <a
-          href="/register"
-          class="rounded text-center bg-blue-600 hover:bg-blue-800 inline-block px-3 text-bold"
-        >
-          Add Your Contact
-        </a>
+        <a href="/login" class="flex items-center rounded mr-4 sm:mr-12 text-center inline-block px-3 text-bold hover:text-gray-300">Login</a>
+        <a href="/register" class="rounded text-center bg-blue-600 hover:bg-blue-800 inline-block px-3 text-bold"> Add Your Contact </a>
       </div>
     </nav>
     <% } %>
   </header>
 
-  <body class="bg-gray-200" style="z-index: -1;">
-    <a id="skip-nav" class="screenreader-text" href="#main-content">
-      Skip to Main Content
-    </a>
+  <body class="bg-gray-200" style="z-index: -1">
+    <a id="skip-nav" class="screenreader-text" href="#main-content"> Skip to Main Content </a>
     <main id="main-content">
       <!-- BODY  -->
+    </main>
+  </body>
+</html>
