native tailwind and new modal

--- a/view/includes/header.ejs
+++ b/view/includes/header.ejs
@@ -25,9 +25,9 @@
     <meta name="twitter:description" content="Find Your GSS Gwarinpa Classmates and Their Contacts." />
     <meta name="twitter:image" content="<%= typeof(locals.seo) == 'undefined' ? 'https://gss-gwarinpa.s3.us-east-2.amazonaws.com/1580629627915' : `${locals.seo.photo}` %>" />
     <!-- SEO ENDS -->
-    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet" />
+   
     <script src="/main-bundled.js" defer></script>
-    <link type="text/css" href="/main.css" rel="stylesheet" />
+    <link type="text/css" href="/tailwindcss/output.css" rel="stylesheet" />
   </head>
 
   <header class="bg-green-600 text-xs text-white">
