--- a/public/tailwindcss/input.css
+++ b/public/tailwindcss/input.css
@@ -1,8 +1,7 @@
-/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-html {
-  scroll-behavior: smooth;
-}
 .screenreader-text {
   position: absolute;
   left: -999px;
@@ -121,5 +120,3 @@ button:active {
   margin-bottom: 10px;
   display: block;
 }
-
-
