--- a/view/includes/profileLong.ejs
+++ b/view/includes/profileLong.ejs
@@ -12,7 +12,7 @@
     <div class="flex min-h-full items-end justify-center p-4 text-center sm:items-center sm:p-0">
       <div class="relative transform overflow-hidden rounded-lg bg-white px-4 pt-5 pb-4 text-left shadow-xl transition-all sm:my-8 sm:w-full sm:max-w-sm sm:p-6">
         <div class="space-y-4">
-          <div class="aspect-w-3 aspect-h-2 cursor-pointer">
+          <div class="aspect-w-3 aspect-h-2">
             <img class="rounded-lg object-cover shadow-lg" src="<%= profile.photo %>" alt="<%= profile.firstName %> <%= profile.lastName %>" />
           </div>
 
@@ -31,7 +31,7 @@
 
 <div class="mx-auto text-sm rounded overflow-hidden shadow-lg bg-white -z-50" style="height: 25rem; width: 18rem">
   <% if(profile.photo){ %>
-  <img id="profile-image" class="w-full h-48 object-cover" title="<%= profile.firstName %>" src="<%= profile.photo %>" alt="profile picture" importance="high" srcset="<%= profile.photo %>" />
+  <img id="profile-image" class="cursor-pointer w-full h-48 object-cover" title="<%= profile.firstName %>" src="<%= profile.photo %>" alt="profile picture" importance="high" srcset="<%= profile.photo %>" />
   <% } else { %>
   <img class="w-full h-48 object-cover" title="<%= profile.firstName %> <%= profile.lastName %>" src="../../static/blank.png" alt="profile picture" />
   <%}%>
