--- a/view/profileLoggedInUser.ejs
+++ b/view/profileLoggedInUser.ejs
@@ -4,23 +4,16 @@
 <div class="max-w-xs mx-auto"><%- include('includes/flash') %></div>
 <h2 class="text-2xl m-4 text-center">Profile Dashboard</h2>
 <div class="mx-auto" style="width: 18rem">
-  <a
-    class="inline-block w-full text-center mb-3 px-4 py-1 text-blue-800 rounded border border-blue-800 hover:text-white hover:bg-blue-600"
-    href="/profile/<%= user.email %>/Edit"
-    >Edit Profile</a
-  >
-  <%- include('includes/profileShared') %> 
+  <a class="inline-block w-full text-center mb-3 px-4 py-1 text-blue-800 rounded border border-blue-800 hover:text-white hover:bg-blue-600" href="/profile/<%= user.email %>/Edit">Edit Profile</a>
+  <%- include('includes/profileLong') %>
   <!-- SHOW NUMBER OF COMMENTS AND LIKES -->
-    <%- include('includes/homepageForEachProfileGuest', {profile: profile}) %>
+  <%- include('includes/homepageForEachProfileGuest', {profile: profile}) %>
   <!-- SHOW NUMBER OF COMMENTS AND LIKES END -->
   <%-include('includes/toggleMoreProfile') %>
-  <hr class="border border-b-px border-white mt-3">
-  <div class="flex justify-between items-center mx-auto" style="width: 18rem;">
-    <%- include('includes/clickToComment') %>
-    <%- include('includes/likes') %>
-  </div>
-  <hr class="border border-b-px border-white">
-    <%- include('includes/commentsForm') %>
-  </div>
-  <%- include('includes/footer') %>
-  <!-- FOOTER-->
+  <hr class="border border-b-px border-white mt-3" />
+  <div class="flex justify-between items-center mx-auto" style="width: 18rem"><%- include('includes/clickToComment') %> <%- include('includes/likes') %></div>
+  <hr class="border border-b-px border-white" />
+  <%- include('includes/commentsForm') %>
+</div>
+<%- include('includes/footer') %>
+<!-- FOOTER-->
