remove fb auth and adjust profile displays

--- a/view/loginPage.ejs
+++ b/view/loginPage.ejs
@@ -2,14 +2,6 @@
   <section class="max-w-sm px-2 mx-auto sm:px-0">
     <div>
       <a href="/" class="block my-6 text-2xl text-center">GSS Gwarinpa Contact Book</a>
-      <!-- FB LOGIN LINK-->
-      <a href="/fb-login">
-        <div class="flex justify-center items-center text-white rounded px-2 mb-4" style="background-color: #4D68A1;">
-          <img src="../../static/fb-btn.png" class="rounded mr-2" alt="fb-logo" />
-          <p>Sign in with Facebook</p>
-        </div>
-      </a>
-      <!-- FB LOGIN LINK ENDS-->
       <!-- TWITTER LOGIN LINK-->
       <a href="/twitter-login">
         <div class="flex justify-center items-center text-white rounded px-2 mb-4" style="background-color: #00acee;">
@@ -35,7 +27,7 @@
             <label for="email" class="w-full text-xs font-bold block mb-1 uppercase tracking-wide text-gray-700 ">Enter
               Your Email</label>
             <input id="email" name="email" type="text"
-              class="w-full py-3 px-4 appearance-none bg-gray-200 focus:outline-none focus:border-gray-500 focus:bg-white appearance-none border rounded py-1 px-3 text-gray-700 leading-tight" />
+              class="w-full py-3 px-4 bg-gray-200 focus:outline-none focus:border-gray-500 focus:bg-white appearance-none border rounded  text-gray-700 leading-tight" />
           </div>
           <div class="mb-4">
             <div class="flex justify-between mb-1 text-xs uppercase font-bold tracking-wide text-gray-700">
@@ -45,7 +37,7 @@
               </a>
             </div>
             <input id="password" name="password" type="password" autocomplete="current-password"
-              class="w-full py-3 px-4 appearance-none bg-gray-200 focus:outline-none focus:border-gray-500 focus:bg-white appearance-none border rounded py-1 px-3 text-gray-700 leading-tight" />
+              class="w-full py-3 px-4 bg-gray-200 focus:outline-none focus:border-gray-500 focus:bg-white appearance-none border rounded text-gray-700 leading-tight" />
           </div>
           <button class="w-full text-white rounded border border-white bg-blue-600 hover:bg-blue-800 px-2 py-3">
             Login
