--- a/view/includes/profile.ejs
+++ b/view/includes/profile.ejs
@@ -1,9 +1,9 @@
 <li>
   <a href="/profile/<%= profile.email %>" class="space-y-6">
     <% if(profile.photo){ %>
-    <img class="object-fill mx-auto h-40 w-40 rounded-full xl:h-56 xl:w-56" src="<%= profile.photo %>" alt="<%= profile.firstName %> <%= profile.lastName %>" />
+    <img class="object-contain mx-auto rounded-full h-56 w-56 bg-gray-900" src="<%= profile.photo %>" alt="<%= profile.firstName %> <%= profile.lastName %>" />
     <% } else { %>
-    <img class="object-fill mx-auto h-40 w-40 rounded-full xl:h-56 xl:w-56" title="<%= profile.firstName %> <%= profile.lastName %>" src="../../static/blank.png" alt="profile picture" />
+    <img class="object-contain mx-auto rounded-full h-56 w-56 bg-gray-900" title="<%= profile.firstName %> <%= profile.lastName %>" src="../../static/blank.png" alt="profile picture" />
     <%}%>
     <div class="space-y-2">
       <div class="space-y-1 text-lg font-medium leading-6">
