remove duplicate class name

--- a/view/includes/header.ejs
+++ b/view/includes/header.ejs
@@ -25,7 +25,7 @@
     <meta name="twitter:description" content="Find Your GSS Gwarinpa Classmates and Their Contacts." />
     <meta name="twitter:image" content="<%= typeof(locals.seo) == 'undefined' ? 'https://gss-gwarinpa.s3.us-east-2.amazonaws.com/1580629627915' : `${locals.seo.photo}` %>" />
     <!-- SEO ENDS -->
-   
+
     <script src="/main-bundled.js" defer></script>
     <link type="text/css" href="/tailwindcss/output.css" rel="stylesheet" />
   </head>
@@ -52,7 +52,7 @@
 
       <% } else { %>
       <div class="flex text-lg">
-        <a href="/login" class="flex items-center rounded mr-4 sm:mr-12 text-center inline-block px-3 text-bold hover:text-gray-300">Login</a>
+        <a href="/login" class="flex items-center rounded mr-4 sm:mr-12 text-center px-3 text-bold hover:text-gray-300">Login</a>
         <a href="/register" class="rounded text-center bg-blue-600 hover:bg-blue-800 inline-block px-3 text-bold"> Add Your Contact </a>
       </div>
     </nav>
