--- a/view/homePage.ejs
+++ b/view/homePage.ejs
@@ -16,8 +16,8 @@
   <div class="mx-auto max-w-7xl px-4 text-center sm:px-6 lg:px-8">
     <div class="space-y-12">
       <div class="space-y-5 sm:mx-auto sm:max-w-xl sm:space-y-4 lg:max-w-5xl">
-        <h2 class="text-3xl font-bold tracking-tight sm:text-4xl">Present and pass GSS Gwarinpa Students</h2>
-        <p class="text-xl text-gray-500">Project by GSS Gwarinpa class of 2006. Add your contact or search for your classmates.</p>
+        <h1 class="text-3xl font-bold tracking-tight sm:text-4xl">Discover Present & Past GSS Gwarinpa Students</h1>
+        <p class="text-xl text-gray-500">Project by GSS Gwarinpa class of 2006. <a class="text-indigo-600 hover:underline" href="/register">Add</a> your contact or search for your classmates.</p>
       </div>
       <ul role="list" class="mx-auto space-y-16 sm:grid sm:grid-cols-2 sm:gap-16 sm:space-y-0 lg:max-w-5xl lg:grid-cols-3">
         <% if(profiles.length){ %> <% profiles.forEach(profile => { %> <%- include('includes/profile', {profile: profile}) %> <% }) %> <% } else { %>
