--- a/view/includes/goToProfile.ejs
+++ b/view/includes/goToProfile.ejs
@@ -1,6 +1,3 @@
-<a
-  href="/profile/<%- profile.email %>"
-  class="text-md w-48 mx-auto inline-block my-2 flex justify-center text-blue-500"
->
-  <div class="flex justify-center items-center"><span class="text-2xl">&#8592</span> Go to profile</div>
+<a href="/profile/<%- profile.email %>" class="text-md w-48 mx-auto my-2 flex justify-center text-blue-500">
+  <div class="flex justify-center items-center"><span class="text-2xl">&#8592;&nbsp;</span> Go to profile</div>
 </a>
