--- a/view/includes/searchBar.ejs
+++ b/view/includes/searchBar.ejs
@@ -1,4 +1,4 @@
-<form action="/" method="POST" class="flex max-w-xl my-4  m-8 sm:mx-auto" style="position: relative;">
+<form action="/" method="POST" class="flex px-8 sm:max-w-5xl my-4 sm:mx-auto" style="position: relative;">
   <svg
     style="position: absolute;"
     class="m-4 fill-current pointer-events-none text-gray-600 w-4 h-4"
