--- a/view/includes/sort.ejs
+++ b/view/includes/sort.ejs
@@ -1,17 +1,18 @@
-  <section id="filter-section" class="flex justify-center relative">
-    <div class="label-onlick-bg-color flex items-center text-md cursor-pointer mr-4" id="filter-icon-container">
-      <img src="../../static/filter.svg" alt="filter-icon" />
-      <label class="label-onlick-bg-color ml-1 cursor-pointer">Filter</label>
-    </div>
+<section id="filter-section" class="flex justify-center relative">
+  <div class="label-onlick-bg-color flex items-center text-md cursor-pointer mr-4" id="filter-icon-container">
+    <img src="../../static/filter.svg" alt="filter-icon" />
+    <label class="label-onlick-bg-color ml-1 cursor-pointer">Filter</label>
+  </div>
 
-    <div id="form-container" style="display: none" class="absolute mt-8">
-      <form action="/sort" method="POST" class="pt-1">
-        <button value="-1" name="q" class="mr-2">
-          <p class="px-2">Newer profiles first</p>
-        </button>
-        <button value="1" name="q">
-          <p class="px-2">Older profiles first</p>
-        </button>
-      </form>
-    </div>
-  </section>
+  <div id="form-container" style="display: none" class="absolute mt-8">
+    <form action="/" method="POST" class="pt-1">
+      <input type="hidden" name="sort" value="sort" />
+      <button value="-1" name="q" class="mr-2">
+        <p class="px-2">Newer profiles first</p>
+      </button>
+      <button value="1" name="q">
+        <p class="px-2">Older profiles first</p>
+      </button>
+    </form>
+  </div>
+</section>
