update sort/search to use get

--- a/view/includes/searchBar.ejs
+++ b/view/includes/searchBar.ejs
@@ -1,21 +1,7 @@
-<form action="/" method="POST" class="flex px-8 sm:max-w-5xl my-4 sm:mx-auto" style="position: relative;">
-  <svg
-    style="position: absolute;"
-    class="m-4 fill-current pointer-events-none text-gray-600 w-4 h-4"
-    xmlns="http://www.w3.org/2000/svg"
-    viewBox="0 0 20 20"
-  >
-    <path
-      d="M12.9 14.32a8 8 0 1 1 1.41-1.41l5.35 5.33-1.42 1.42-5.33-5.34zM8 14A6 6 0 1 0 8 2a6 6 0 0 0 0 12z"
-    ></path>
+<form action="/" method="GET" class="flex px-8 sm:max-w-5xl my-4 sm:mx-auto" style="position: relative">
+  <svg style="position: absolute" class="m-4 fill-current pointer-events-none text-gray-600 w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+    <path d="M12.9 14.32a8 8 0 1 1 1.41-1.41l5.35 5.33-1.42 1.42-5.33-5.34zM8 14A6 6 0 1 0 8 2a6 6 0 0 0 0 12z"></path>
   </svg>
-  <input
-    name="q"
-    type="search"
-    placeholder="Search classmates"
-    class=" w-full bg-white shadow-md focus:outline-0 border border-transparent placeholder-gray-600 rounded-tl-lg rounded-bl-lg pl-10 pr-2 py-2 block appearance-none leading-normal"
-  />
-  <button class="bg-green-600 px-3 cursor-pointer py-1 text-white font-bold rounded-tr-lg rounded-br-lg">
-    Search
-  </button>
+  <input name="q" type="search" placeholder="Search classmates" class="w-full bg-white shadow-md focus:outline-0 border border-transparent placeholder-gray-600 rounded-tl-lg rounded-bl-lg pl-10 pr-2 py-2 block appearance-none leading-normal" />
+  <button class="bg-green-600 px-3 cursor-pointer py-1 text-white font-bold rounded-tr-lg rounded-br-lg">Search</button>
 </form>
