--- a/view/includes/sort.ejs
+++ b/view/includes/sort.ejs
@@ -5,14 +5,12 @@
   </div>
 
   <div id="form-container" style="display: none" class="absolute mt-8">
-    <form action="/" method="POST" class="pt-1">
-      <input type="hidden" name="sort" value="sort" />
-      <button value="-1" name="q" class="mr-2">
-        <p class="px-2">Newer profiles first</p>
-      </button>
-      <button value="1" name="q">
-        <p class="px-2">Older profiles first</p>
-      </button>
+    <form action="/" method="GET" class="pt-1 flex items-center">
+      <select name="sort" id="sort" class="block w-full rounded-l-md border-gray-300 py-2 pl-3 pr-10 text-base focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm">
+        <option value="-1">Newer profiles first</option>
+        <option value="1">Older profiles first</option>
+      </select>
+      <button class="bg-green-600 px-3 cursor-pointer py-1 text-white font-bold rounded-tr-lg rounded-br-lg">Submit</button>
     </form>
   </div>
 </section>
