--- a/view/includes/searchBar.ejs
+++ b/view/includes/searchBar.ejs
@@ -1,4 +1,4 @@
-<form action="/" method="GET" class="flex px-8 sm:max-w-5xl my-4 sm:mx-auto" style="position: relative">
+<form action="/contacts" method="GET" class="flex px-8 sm:max-w-5xl my-4 sm:mx-auto" style="position: relative">
   <svg style="position: absolute" class="m-4 fill-current pointer-events-none text-gray-600 w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
     <path d="M12.9 14.32a8 8 0 1 1 1.41-1.41l5.35 5.33-1.42 1.42-5.33-5.34zM8 14A6 6 0 1 0 8 2a6 6 0 0 0 0 12z"></path>
   </svg>
