--- a/view/includes/header.ejs
+++ b/view/includes/header.ejs
@@ -49,35 +49,79 @@
   </head>
 
   <header class="bg-green-600 text-xs text-white">
-    <nav class="flex justify-between items-center px-8 sm:max-w-5xl mx-auto h-12">
-      <a class="flex items-center" href="/">
-        <?xml version="1.0" encoding="utf-8"?><svg version="1.1" class="mr-2" fill="currentColor" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="24" height="24" viewBox="0 0 117.021 122.881" enable-background="new 0 0 117.021 122.881" xml:space="preserve">
-          <g><path d="M7.852,5.619c-0.328,0-0.61,0.05-0.85,0.149C6.751,5.873,6.511,6.041,6.281,6.271L6.27,6.281l0,0 C6.045,6.506,5.881,6.745,5.779,6.998C5.672,7.263,5.619,7.586,5.619,7.969V114.91c0,0.383,0.053,0.705,0.161,0.971 c0.102,0.254,0.266,0.492,0.491,0.719l0.011,0.01h0c0.229,0.23,0.47,0.398,0.721,0.502c0.24,0.1,0.522,0.15,0.85,0.15h90.682 c0.382,0,0.705-0.055,0.971-0.16c0.253-0.104,0.491-0.268,0.717-0.492l0.011-0.01l0,0c0.225-0.227,0.389-0.465,0.491-0.719 c0.106-0.266,0.16-0.588,0.16-0.971c0-35.646,0-71.293,0-106.941c0-0.382-0.054-0.706-0.16-0.971 c-0.103-0.253-0.267-0.492-0.491-0.717l-0.011-0.011v0c-0.226-0.226-0.464-0.389-0.717-0.491c-0.266-0.107-0.589-0.161-0.971-0.161 H7.852L7.852,5.619z M41.418,43.467v6.565c-3.308,0.843-3.152,9.906,0.525,9.906c1.133-0.021,6.383,7.607,7.155,8.878 c1.499,2.469,0,3.373,0,5.059c-16.09,3.631-20.733,1.33-20.733,17.613H56.48h28.116c0-16.283-4.644-13.982-20.733-17.613 c0-2.004-1.329-2.869,0-5.059c1.499-2.467,4.245-5.92,7.067-8.879c3.877,0.072,3.975-9.049,0.612-9.905v-6.565 C71.543,27.651,41.418,27.651,41.418,43.467L41.418,43.467z M4.852,0.588C5.794,0.195,6.792,0,7.852,0h90.682 c1.083,0,2.1,0.191,3.055,0.578c0.963,0.389,1.825,0.964,2.593,1.729l0.001,0.001l0.006,0.005l0.006,0.006 c0.766,0.768,1.342,1.63,1.73,2.593c0.387,0.956,0.577,1.972,0.577,3.056v11.497h7.025c0.523,0,1.012,0.112,1.483,0.333 c0.532,0.25,0.947,0.594,1.274,1.032l-0.007,0.005c0.254,0.34,0.444,0.695,0.566,1.083l-0.01,0.003 c0.123,0.389,0.187,0.77,0.187,1.154v15.812c0,0.354-0.065,0.71-0.197,1.055c-0.05,0.14-0.111,0.277-0.185,0.412 c-0.198,0.361-0.473,0.69-0.824,0.963c-0.181,0.147-0.373,0.272-0.576,0.375l-0.002-0.004l-0.009,0.004 c-0.448,0.224-0.902,0.337-1.368,0.337h-7.358v8.12h7.025c0.53,0,1.022,0.111,1.494,0.333l-0.002,0.004 c0.526,0.249,0.939,0.591,1.266,1.027l-0.007,0.006c0.223,0.298,0.394,0.605,0.513,0.921c0.153,0.409,0.23,0.816,0.23,1.221V69.57 c0,0.475-0.112,0.934-0.337,1.379c-0.16,0.316-0.361,0.6-0.604,0.842l-0.006-0.006c-0.264,0.264-0.547,0.471-0.847,0.619 l-0.005-0.008c-0.447,0.223-0.901,0.334-1.363,0.334h-7.358v8.121h7.025c0.423,0,0.824,0.07,1.22,0.209 c0.512,0.18,0.929,0.443,1.275,0.789l-0.003,0.002c0.358,0.352,0.622,0.777,0.792,1.266h-0.003l0.003,0.01 c0.14,0.402,0.21,0.813,0.21,1.219v15.789c0,0.283-0.038,0.568-0.115,0.857c-0.02,0.078-0.042,0.158-0.068,0.238 c-0.159,0.477-0.413,0.887-0.757,1.232c-0.256,0.256-0.536,0.461-0.842,0.615c-0.445,0.225-0.904,0.336-1.379,0.336h-7.358v11.496 c0,1.084-0.19,2.1-0.577,3.057c-0.389,0.961-0.963,1.822-1.728,2.59l-0.003,0.004l-0.008,0.008l-0.004,0.002 c-0.768,0.768-1.63,1.344-2.594,1.732c-0.955,0.387-1.972,0.578-3.055,0.578H7.852c-1.061,0-2.058-0.195-3-0.59 c-0.926-0.385-1.766-0.957-2.529-1.717l-0.003-0.004l-0.006-0.004l-0.005-0.006c-0.767-0.768-1.342-1.631-1.731-2.594 C0.191,117.01,0,115.994,0,114.91V7.969c0-1.083,0.191-2.1,0.577-3.056c0.39-0.963,0.965-1.824,1.73-2.592L2.309,2.32l0.003-0.004 l0.007-0.007C3.083,1.547,3.924,0.975,4.852,0.588L4.852,0.588z" /></g>
-        </svg>
-
-        <p class="hidden sm:block text-lg ml-1 font-semibold">Gwarinpa Contact Book</p>
-      </a>
-
-      <% if (user) { %>
-      <form action="/logout" method="POST" class="flex flex-wrap">
-        <label for="logout">
-          <input id="logout" value="Logout" type="submit" class="mr-4 rounded bg-transparent cursor-pointer border border-white hover:bg-green-800 px-3 py-1" />
-        </label>
-      </form>
-
-      <% } else { %>
-      <div class="flex text-lg">
-        <a href="/login" class="flex items-center rounded mr-4 sm:mr-12 text-center px-3 text-bold hover:text-gray-300">Login</a>
-        <a href="/register" class="rounded text-center bg-blue-600 hover:bg-blue-800 inline-block px-3 text-bold"> Add Your Contact </a>
+    <div class="relative bg-white shadow">
+      <div class="mx-auto max-w-7xl px-4 sm:px-6">
+        <div class="flex items-center justify-between py-6 md:justify-start md:space-x-10">
+          <div class="flex justify-start lg:w-0 lg:flex-1">
+            <a href="/" class="h-8 w-auto sm:h-10 flex items-center">
+              <?xml version="1.0" encoding="utf-8"?><svg version="1.1" class="mr-2" fill="green" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="24" height="24" viewBox="0 0 117.021 122.881" enable-background="new 0 0 117.021 122.881" xml:space="preserve">
+                <g><path d="M7.852,5.619c-0.328,0-0.61,0.05-0.85,0.149C6.751,5.873,6.511,6.041,6.281,6.271L6.27,6.281l0,0 C6.045,6.506,5.881,6.745,5.779,6.998C5.672,7.263,5.619,7.586,5.619,7.969V114.91c0,0.383,0.053,0.705,0.161,0.971 c0.102,0.254,0.266,0.492,0.491,0.719l0.011,0.01h0c0.229,0.23,0.47,0.398,0.721,0.502c0.24,0.1,0.522,0.15,0.85,0.15h90.682 c0.382,0,0.705-0.055,0.971-0.16c0.253-0.104,0.491-0.268,0.717-0.492l0.011-0.01l0,0c0.225-0.227,0.389-0.465,0.491-0.719 c0.106-0.266,0.16-0.588,0.16-0.971c0-35.646,0-71.293,0-106.941c0-0.382-0.054-0.706-0.16-0.971 c-0.103-0.253-0.267-0.492-0.491-0.717l-0.011-0.011v0c-0.226-0.226-0.464-0.389-0.717-0.491c-0.266-0.107-0.589-0.161-0.971-0.161 H7.852L7.852,5.619z M41.418,43.467v6.565c-3.308,0.843-3.152,9.906,0.525,9.906c1.133-0.021,6.383,7.607,7.155,8.878 c1.499,2.469,0,3.373,0,5.059c-16.09,3.631-20.733,1.33-20.733,17.613H56.48h28.116c0-16.283-4.644-13.982-20.733-17.613 c0-2.004-1.329-2.869,0-5.059c1.499-2.467,4.245-5.92,7.067-8.879c3.877,0.072,3.975-9.049,0.612-9.905v-6.565 C71.543,27.651,41.418,27.651,41.418,43.467L41.418,43.467z M4.852,0.588C5.794,0.195,6.792,0,7.852,0h90.682 c1.083,0,2.1,0.191,3.055,0.578c0.963,0.389,1.825,0.964,2.593,1.729l0.001,0.001l0.006,0.005l0.006,0.006 c0.766,0.768,1.342,1.63,1.73,2.593c0.387,0.956,0.577,1.972,0.577,3.056v11.497h7.025c0.523,0,1.012,0.112,1.483,0.333 c0.532,0.25,0.947,0.594,1.274,1.032l-0.007,0.005c0.254,0.34,0.444,0.695,0.566,1.083l-0.01,0.003 c0.123,0.389,0.187,0.77,0.187,1.154v15.812c0,0.354-0.065,0.71-0.197,1.055c-0.05,0.14-0.111,0.277-0.185,0.412 c-0.198,0.361-0.473,0.69-0.824,0.963c-0.181,0.147-0.373,0.272-0.576,0.375l-0.002-0.004l-0.009,0.004 c-0.448,0.224-0.902,0.337-1.368,0.337h-7.358v8.12h7.025c0.53,0,1.022,0.111,1.494,0.333l-0.002,0.004 c0.526,0.249,0.939,0.591,1.266,1.027l-0.007,0.006c0.223,0.298,0.394,0.605,0.513,0.921c0.153,0.409,0.23,0.816,0.23,1.221V69.57 c0,0.475-0.112,0.934-0.337,1.379c-0.16,0.316-0.361,0.6-0.604,0.842l-0.006-0.006c-0.264,0.264-0.547,0.471-0.847,0.619 l-0.005-0.008c-0.447,0.223-0.901,0.334-1.363,0.334h-7.358v8.121h7.025c0.423,0,0.824,0.07,1.22,0.209 c0.512,0.18,0.929,0.443,1.275,0.789l-0.003,0.002c0.358,0.352,0.622,0.777,0.792,1.266h-0.003l0.003,0.01 c0.14,0.402,0.21,0.813,0.21,1.219v15.789c0,0.283-0.038,0.568-0.115,0.857c-0.02,0.078-0.042,0.158-0.068,0.238 c-0.159,0.477-0.413,0.887-0.757,1.232c-0.256,0.256-0.536,0.461-0.842,0.615c-0.445,0.225-0.904,0.336-1.379,0.336h-7.358v11.496 c0,1.084-0.19,2.1-0.577,3.057c-0.389,0.961-0.963,1.822-1.728,2.59l-0.003,0.004l-0.008,0.008l-0.004,0.002 c-0.768,0.768-1.63,1.344-2.594,1.732c-0.955,0.387-1.972,0.578-3.055,0.578H7.852c-1.061,0-2.058-0.195-3-0.59 c-0.926-0.385-1.766-0.957-2.529-1.717l-0.003-0.004l-0.006-0.004l-0.005-0.006c-0.767-0.768-1.342-1.631-1.731-2.594 C0.191,117.01,0,115.994,0,114.91V7.969c0-1.083,0.191-2.1,0.577-3.056c0.39-0.963,0.965-1.824,1.73-2.592L2.309,2.32l0.003-0.004 l0.007-0.007C3.083,1.547,3.924,0.975,4.852,0.588L4.852,0.588z" /></g>
+              </svg>
+              <span class="hidden sm:block text-lg ml-1 font-semibold text-gray-700">Gwarinpa Contact Book</span>
+            </a>
+          </div>
+          <div class="-my-2 -mr-2 md:hidden">
+            <button type="button" class="inline-flex items-center justify-center rounded-md bg-white p-2 text-gray-400 hover:bg-gray-100 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500" aria-expanded="false">
+              <span class="sr-only">Open menu</span>
+              <!-- Heroicon name: outline/bars-3 -->
+              <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+              </svg>
+            </button>
+          </div>
+          <nav class="hidden space-x-10 md:flex">
+            <a href="/contacts" class="text-base font-medium text-gray-500 hover:text-gray-900">Contacts</a>
+            <a href="/about" class="text-base font-medium text-gray-500 hover:text-gray-900">About</a>
+          </nav>
+          <div class="hidden items-center justify-end md:flex md:flex-1 lg:w-0">
+            <% if (user) { %>
+            <form action="/logout" method="POST" class="flex flex-wrap">
+              <label for="logout">
+                <input id="logout" value="Logout" type="submit" class="ml-8 inline-flex items-center justify-center whitespace-nowrap rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-indigo-700" />
+              </label>
+            </form>
+            <% } { %>
+            <a href="/login" class="whitespace-nowrap text-base font-medium text-gray-500 hover:text-gray-900">Sign in</a>
+            <a href="/register" class="ml-8 inline-flex items-center justify-center whitespace-nowrap rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-indigo-700">Register</a>
+            <% } %>
+          </div>
+        </div>
       </div>
-    </nav>
-    <% } %>
+
+      <!--
+      Mobile menu, show/hide based on mobile menu state.
+
+      Entering: "duration-200 ease-out"
+        From: "opacity-0 scale-95"
+        To: "opacity-100 scale-100"
+      Leaving: "duration-100 ease-in"
+        From: "opacity-100 scale-100"
+        To: "opacity-0 scale-95"
+    -->
+      <div class="absolute inset-x-0 top-0 z-10 origin-top-right transform p-2 transition md:hidden">
+        <div class="divide-y-2 divide-gray-50 rounded-lg bg-white shadow-lg ring-1 ring-black ring-opacity-5">
+          <div class="space-y-6 py-6 px-5">
+            <div class="grid grid-cols-2 gap-y-4 gap-x-8">
+              <a href="/contacts" class="text-base font-medium text-gray-900 hover:text-gray-700">Contacts</a>
+
+              <a href="/about" class="text-base font-medium text-gray-900 hover:text-gray-700">About</a>
+            </div>
+            <div>
+              <a href="#" class="flex w-full items-center justify-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-indigo-700">Sign up</a>
+              <p class="mt-6 text-center text-base font-medium text-gray-500">
+                Already registered?
+                <a href="#" class="text-indigo-600 hover:text-indigo-500">Sign in</a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </header>
 
   <body class="bg-gray-50" style="z-index: -1">
     <a id="skip-nav" class="screenreader-text" href="#main-content"> Skip to Main Content </a>
     <main id="main-content">
       <!-- BODY  -->
-    </main>
-  </body>
-</html>
+
+      <!--WATCH OUT FOR AUTO COMPLETE HERE  -->
