--- a/view/includes/header.ejs
+++ b/view/includes/header.ejs
@@ -77,10 +77,10 @@
             <% if (user) { %>
             <form action="/logout" method="POST" class="flex flex-wrap">
               <label for="logout">
-                <input id="logout" value="Logout" type="submit" class="ml-8 inline-flex items-center justify-center whitespace-nowrap rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-indigo-700" />
+                <input id="logout" value="Logout" type="submit" class="cursor-pointer ml-8 inline-flex items-center justify-center whitespace-nowrap rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-indigo-700" />
               </label>
             </form>
-            <% } { %>
+            <% } else { %>
             <a href="/login" class="whitespace-nowrap text-base font-medium text-gray-500 hover:text-gray-900">Sign in</a>
             <a href="/register" class="ml-8 inline-flex items-center justify-center whitespace-nowrap rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-indigo-700">Register</a>
             <% } %>
