--- a/view/404.ejs
+++ b/view/404.ejs
@@ -3,8 +3,6 @@
 <div class="text-center m-4">
   <p class="text-6xl">404</p>
   <h2>Abeg no vex, that page is not available.</h2>
-  <p class="lead text-muted">
-    You can always visit the <a href="/" class="text-blue-700 underline">homepage</a> to start over.
-  </p>
+  <p class="lead text-muted">You can always visit the <a href="/" class="text-green-700 underline">homepage</a> to start over.</p>
 </div>
 <%- include('includes/footer') %>
