--- a/view/editProfilePage.ejs
+++ b/view/editProfilePage.ejs
@@ -79,7 +79,7 @@
         </div>
       </div>
       <button
-        class="rounded w-full bg-blue-600 hover:bg-blue-800 text-white py-1"
+        class="rounded w-full bg-green-600 hover:bg-green-800 text-white py-1"
       >
         Save Changes
       </button>
@@ -168,7 +168,7 @@
           </div>
         </div>
         <button
-          class="rounded w-full bg-blue-600 hover:bg-blue-800 text-white py-1"
+          class="rounded w-full bg-green-600 hover:bg-green-800 text-white py-1"
         >
           Save Changes
         </button>
@@ -413,7 +413,7 @@
         </div>
       </div>
       <button
-        class="rounded w-full bg-blue-600 hover:bg-blue-800 text-white py-1"
+        class="rounded w-full bg-green-600 hover:bg-green-800 text-white py-1"
       >
         Save Changes
       </button>
