--- a/view/includes/header copy.ejs
+++ b/view/includes/header copy.ejs
@@ -68,7 +68,7 @@
       <% } else { %>
       <div class="flex text-lg">
         <a href="/login" class="flex items-center rounded mr-4 sm:mr-12 text-center px-3 text-bold hover:text-gray-300">Login</a>
-        <a href="/register" class="rounded text-center bg-blue-600 hover:bg-blue-800 inline-block px-3 text-bold"> Add Your Contact </a>
+        <a href="/register" class="rounded text-center bg-green-600 hover:bg-green-800 inline-block px-3 text-bold"> Add Your Contact </a>
       </div>
     </nav>
     <% } %>
