--- a/view/resetPasswordPage.ejs
+++ b/view/resetPasswordPage.ejs
@@ -9,7 +9,7 @@
         <label for="reset_password" class="block text-left uppercase text-gray-700 text-sm font-bold mb-2"> Enter your email</label>
         <input name="reset_password_email" class="w-full rounded block py-3 px-4 leading-tight border border-gray-200 bg-gray-200 my-4 focus:outline-none appearance-none focus:bg-white text-gray-700" type="text" />
       </div>
-      <button class="w-full bg-blue-600 text-white hover:bg-blue-700 rounded py-3">Send Me a Reset Token</button>
+      <button class="w-full bg-green-600 text-white hover:bg-green-700 rounded py-3">Send Me a Reset Token</button>
     </form>
     <div class="text-xs mt-3">
       <p>
@@ -19,7 +19,7 @@
       <p>Still don't see your reset token? Contact me at <em>adamu.dankore@gmail.com</em></p>
     </div>
   </div>
-  <a href="/login" class="inline-block">Return to <span class="text-blue-600 text-left">login</span> page</a>
+  <a href="/login" class="inline-block">Return to <span class="text-green-600 text-left">login</span> page</a>
 </div>
 
 <%- include('includes/footer') %>
