--- a/view/resetTokenPage.ejs
+++ b/view/resetTokenPage.ejs
@@ -13,7 +13,7 @@
       <input name="confirm_new_password" class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" id="confirm-new-password" type="password" />
     </div>
     <p class="text-red-600 text-xs mb-6 italic">New password should be a minimun of 6 characters</p>
-    <button class="bg-blue-500 w-full hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Change Password</button>
+    <button class="bg-green-500 w-full hover:bg-green-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Change Password</button>
   </form>
 </div>
 <%- include('includes/footer') %>
