--- a/view/account.ejs
+++ b/view/account.ejs
@@ -10,14 +10,14 @@
           <input id="delete-my-account" value="Yes, Delete My Account" type="submit" class="inline-block cursor-pointer bg-transparent text-red-800 rounded border border-red-800 w-56 hover:text-white hover:bg-red-600" />
         </label>
       </form>
-      <button id="close-modal" class="inline-block text-blue-800 sm:ml-6 mt-8 sm:mt-0 rounded border border-blue-800 w-56 hover:text-white hover:bg-blue-600">No, Cancel</button>
+      <button id="close-modal" class="inline-block text-green-800 sm:ml-6 mt-8 sm:mt-0 rounded border border-green-800 w-56 hover:text-white hover:bg-green-600">No, Cancel</button>
     </div>
   </div>
   <!-- MODAL ENDS -->
 
   <div class="max-w-2xl text-center mx-4 sm:mx-auto p-4 rounded">
     <button id="delete-profile" class="inline-block text-center text-md px-3 mr-4 my-2 text-red-800 rounded border border-red-800 mx-auto hover:text-white hover:bg-red-600">Delete Your Account</button>
-    <a href="/account/<%= user.email %>/change-password" class="inline-block text-center text-md px-3 my-2 text-blue-800 rounded border border-blue-800 mx-auto hover:text-white hover:bg-blue-600"> Change Your Password </a>
+    <a href="/account/<%= user.email %>/change-password" class="inline-block text-center text-md px-3 my-2 text-green-800 rounded border border-green-800 mx-auto hover:text-white hover:bg-green-600"> Change Your Password </a>
   </div>
 </div>
 <%- include('includes/footer') %>
