--- a/view/includes/goToHomePage.ejs
+++ b/view/includes/goToHomePage.ejs
@@ -1,3 +1,3 @@
-  <a href="/" class="w-48 text-md mx-auto my-4 flex justify-left text-blue-500">
-    <div class="flex justify-center items-center"><span class="text-2xl">&#8592; &nbsp;</span> Go to homepage</div>
-  </a>
+<a href="/" class="w-48 text-md mx-auto my-4 flex justify-left text-green-500">
+  <div class="flex justify-center items-center"><span class="text-2xl">&#8592; &nbsp;</span> Go to homepage</div>
+</a>
