--- a/view/profileLoggedInUser.ejs
+++ b/view/profileLoggedInUser.ejs
@@ -4,7 +4,7 @@
 <div class="max-w-xs mx-auto"><%- include('includes/flash') %></div>
 <h2 class="text-2xl m-4 text-center">Profile Dashboard</h2>
 <div class="mx-auto" style="width: 18rem">
-  <a class="inline-block w-full text-center mb-3 px-4 py-1 text-blue-800 rounded border border-blue-800 hover:text-white hover:bg-blue-600" href="/profile/<%= user.email %>/Edit">Edit Profile</a>
+  <a class="inline-block w-full text-center mb-3 px-4 py-1 text-green-800 rounded border border-green-800 hover:text-white hover:bg-green-600" href="/profile/<%= user.email %>/Edit">Edit Profile</a>
   <%- include('includes/profileLong') %>
   <!-- SHOW NUMBER OF COMMENTS AND LIKES -->
   <%- include('includes/homepageForEachProfileGuest', {profile: profile}) %>
