--- a/view/homePage.ejs
+++ b/view/homePage.ejs
@@ -5,11 +5,11 @@
 <%- include('includes/flash') %>
 <!-- ERROR FLASH MESSAGE END-->
 
-<!-- GUESS USER -->
 <section class="lg:relative">
   <div class="mx-auto w-full max-w-7xl pt-16 pb-20 text-center lg:py-48 lg:text-left">
     <div class="px-4 sm:px-8 lg:w-1/2 xl:pr-16">
       <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl md:text-6xl lg:text-5xl xl:text-6xl">
+        <p class="text-lg font-semibold text-green-600">Home</p>
         <span class="block xl:inline">Discover Present & Past</span>
         <span class="block text-green-600 xl:inline">GSS Gwarinpa Students</span>
       </h1>
@@ -28,10 +28,11 @@
     <img class="absolute inset-0 h-full w-full object-cover" src="static/gg.jpeg" alt="" />
   </div>
 </section>
-<section class="mt-12">
+<section class="py-12 bg-gradient-to-r from-gray-200 via-green-100 to-gray-200">
   <div class="text-center sm:px-6 lg:px-8">
     <div class="space-y-12">
       <div class="space-y-5 sm:mx-auto sm:max-w-xl sm:space-y-4 lg:max-w-5xl">
+        <p class="text-lg font-semibold text-green-600">Contacts</p>
         <h2 class="text-3xl font-bold tracking-tight sm:text-4xl">Recently added contacts</h2>
       </div>
       <ul role="list" class="mx-auto space-y-16 sm:grid sm:grid-cols-3 sm:gap-16 sm:space-y-0 lg:grid-cols-4 lg:max-w-7xl lg:mx-auto">
@@ -42,8 +43,6 @@
     </div>
   </div>
 </section>
-
-<!-- GUESS USER END-->
 
 <!-- FOOTER-->
 <%- include('includes/footer') %>
