--- a/view/includes/header.ejs
+++ b/view/includes/header.ejs
@@ -122,12 +122,9 @@
     </div>
   </header>
 
-  <body class="bg-gray-50" style="z-index: -1">
+  <body class="bg-gray-50">
     <a id="skip-nav" class="screenreader-text" href="#main-content"> Skip to Main Content </a>
     <main id="main-content">
       <!-- BODY  -->
 
       <!--WATCH OUT FOR AUTO COMPLETE HERE  -->
-    </main>
-  </body>
-</html>
