--- a/view/about.ejs
+++ b/view/about.ejs
@@ -9,7 +9,7 @@
       <p class="mx-auto mt-5 max-w-xl text-xl text-gray-500">Project by GSS Gwarinpa class of 2006.</p>
     </div>
 
-    <div class="relative bg-white py-16 sm:py-24">
+    <div class="relative bg-white">
       <div class="lg:mx-auto lg:grid lg:max-w-7xl lg:grid-cols-2 lg:items-start lg:gap-24 lg:px-8">
         <div class="relative sm:py-16 lg:py-0">
           <div aria-hidden="true" class="hidden sm:block lg:absolute lg:inset-y-0 lg:right-0 lg:w-screen">
