--- a/view/contacts.ejs
+++ b/view/contacts.ejs
@@ -9,9 +9,8 @@
 <% if(user){ %> <%- include('includes/loggedInUser') %> <% } %>
 <!-- LOGGED IN END-->
 
-<!-- GUESS USER -->
 <%- include('includes/searchBar') %> <%- include('includes/sort') %>
-<div id="anchor-tag" class="flex flex-wrap justify-center mt-12">
+<div id="anchor-tag" class="flex flex-wrap justify-center my-12">
   <div class="mx-auto max-w-7xl px-4 text-center sm:px-6 lg:px-8">
     <div class="space-y-12">
       <div class="space-y-5 sm:mx-auto sm:max-w-xl sm:space-y-4 lg:max-w-5xl">
@@ -26,7 +25,6 @@
     </div>
   </div>
 </div>
-<!-- GUESS USER END-->
 
 <!-- FOOTER-->
 <%- include('includes/footer') %>
