--- a/view/includes/header.ejs
+++ b/view/includes/header.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full">
   <head>
     <meta charset="UTF-8" />
     <title><%= typeof(locals.seo) == "undefined" ? 'GSS Gwarinpa Contact Book 📗' : `${locals.seo.firstName} ${locals.seo.lastName} | GSS Gwarinpa Contact Book 📗` %></title>
@@ -122,7 +122,7 @@
     </div>
   </header>
 
-  <body class="bg-gray-50">
+  <body class="bg-gray-50 h-full">
     <a id="skip-nav" class="screenreader-text" href="#main-content"> Skip to Main Content </a>
     <main id="main-content">
       <!-- BODY  -->
